# trowel

./: .gitignore  extract-schemas.mjs  index.html  main.css  main.js  package.json  render-form.mjs  schemas.json
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
