[package]
name = "trowel"
version = "0.0.1"
description = "Schema-driven editor for pixelbrix.com content collections"
edition = "2021"
rust-version = "1.77"
default-run = "trowel"

[lib]
name = "trowel_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "trowel"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["process", "fs", "rt-multi-thread", "macros"] }
walkdir = "2"
anyhow = "1"
